@@ -1,6 +1,14 @@
 [Scores]
-Easy = 0
+Easy = 40
 Normal = 0
 Hard = 0
 [Misc]
-Windowed = 0
+Windowed = 1
+key_up = 84
+key_left = 82
+key_right = 83
+key_down = 85
+key_fire1 = 26
+key_fire2 = 24
+key_fire3 = 3
+key_slow = 22
